--- a/Classificação Bayesiana e Regressão Logística/Gabaritos/Notebook_8 - Multinomial.ipynb
+++ b/Classificação Bayesiana e Regressão Logística/Gabaritos/Notebook_8 - Multinomial.ipynb
@@ -1,22 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "toc_visible": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "46Wgvcemg2zt"
+      },
       "source": [
         "#**Notebook 08**\n",
         "- **Professor:** Iális Cavalcante\n",
@@ -25,19 +13,16 @@
         "- **Curso:** Engenharia da Computação\n",
         "- **Descrição:**\n",
         "No notebook 8 iremos aprender sobre o algoritmo Naive Bayes Multinomial.\n"
-      ],
-      "metadata": {
-        "id": "46Wgvcemg2zt"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "##Importações de bibliotecas"
-      ],
       "metadata": {
         "id": "NOSU58lWh-ZL"
-      }
+      },
+      "source": [
+        "##Importações de bibliotecas"
+      ]
     },
     {
       "cell_type": "code",
@@ -57,24 +42,29 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "##Algoritmo Naive Bayes - Gaussian"
-      ],
       "metadata": {
         "id": "Vb_YTl3niM5p"
-      }
+      },
+      "source": [
+        "##Algoritmo Naive Bayes - Gaussian"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "###Exemplo 1"
-      ],
       "metadata": {
         "id": "TmdT8e0l8lNR"
-      }
+      },
+      "source": [
+        "###Exemplo 1"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "iSP91hQ4iD9q"
+      },
+      "outputs": [],
       "source": [
         "# Criando um dataframe de exemplo\n",
         "data = {\n",
@@ -83,15 +73,19 @@
         "}\n",
         "\n",
         "df = pd.DataFrame(data)"
-      ],
-      "metadata": {
-        "id": "iSP91hQ4iD9q"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "W27ARJhjigh9",
+        "outputId": "daf57720-2d7a-468b-f4c8-9d3753d58b9a"
+      },
+      "outputs": [],
       "source": [
         "# Criando um vetorizador para converter texto em vetores de contagem de palavras\n",
         "vectorizer = CountVectorizer()\n",
@@ -115,45 +109,43 @@
         "resultado = model.predict(nova_mensagem_vetorizada)\n",
         "\n",
         "print(resultado)  # Saída: ['spam']"
-      ],
-      "metadata": {
-        "id": "W27ARJhjigh9",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "daf57720-2d7a-468b-f4c8-9d3753d58b9a"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "['spam']\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "##Atividades de casa\n",
-        "- Utilize outra base de dados e analise os resultados para o algoritmo KMeans."
-      ],
       "metadata": {
         "id": "mnEU8gwT4p_i"
-      }
+      },
+      "source": [
+        "##Atividades de casa\n",
+        "- Utilize a mesma base de dados e analise os resultados para outros algoritmos."
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "Nx0py0djiU5x"
+      },
       "source": [
         "##Referências\n",
         "- [O algoritmo Naive Bayes — descrição e implementação em Python](https://joaoclaudionc.medium.com/o-algoritmo-naive-bayes-descri%C3%A7%C3%A3o-e-implementa%C3%A7%C3%A3o-em-python-35757ade6b36)\n",
         "- [Naive Bayes](https://scikit-learn.org/stable/modules/naive_bayes.html#multinomial-naive-bayes)"
-      ],
-      "metadata": {
-        "id": "Nx0py0djiU5x"
-      }
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": [],
+      "toc_visible": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
